# seffnet

./: .flake8  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  README.rst  chemical_similarities.py  docker-compose.yml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/source/: cli.rst  conf.py  index.rst
notebooks/: Chemical similarities.ipynb  Splitting Train and Test Sets.ipynb  Train and Evaluate Models.ipynb  Train and Evaluate Translational Models.ipynb  Using the Predictive Model.ipynb  Using the prediction model.ipynb  Visualizing_subgraphs.ipynb  chemical_clustering.ipynb  creating_graphs.ipynb  evaluate_new_drug_indications.ipynb  plot_weight_against_lor.ipynb  robustness_analysis.ipynb  testing_edgelist.edgelist  testing_edgelist.txt  training_edgelist.edgelist  training_edgelist.txt
notebooks/.ipynb_checkpoints/: Train and Evaluate Models-checkpoint.ipynb
resources/: Clustered_chemicals.csv  README.md  chem_sim_graph.edgelist  clusters_weights.csv  drugbank_pubchem_mapping.tsv  drugs_smiles.csv  full_graph_without_sim.edgelist  fullgraph.edgelist  fullgraph_chem_sim.edgelist  fullgraph_nodes_mapping.tsv  fullgraph_weighted.edgelist  fullgraph_with_chemsim.edgelist  fullgraph_with_chemsim_70.edgelist  fullgraph_without_sim.edgelist  parkinsons-chemicals.tsv  testing_edgelist.edgelist  testing_edgelist_70.edgelist  training_edgelist.edgelist  training_edgelist_70.edgelist
resources/50%_chemsim_graphs/: clusters_weights_50.csv
resources/70%_chemsim_graphs/: clusters_weights_70.csv  fullgraph_with_chemsim_70.edgelist
resources/basic_graphs/: README.md  fullgraph_weighted_without_chemsim.edgelist  fullgraph_with_chemsim.edgelist  fullgraph_without_chemsim.edgelist  fullgraph_without_sim.edgelist  testing_set.edgelist  training_set.edgelist  weighted_evaluation_set.edgelist  weighted_testing_set.edgelist  weighted_training_set.edgelist
resources/chemsim_50_graphs/: clusters_weights_50.csv  testing_edgelist_50.edgelist
resources/chemsim_70_graphs/: chem_sim_graph_70.edgelist  clusters_weights_70.csv  fullgraph_with_chemsim_70.edgelist  testing_edgelist_70.edgelist  training_edgelist_70.edgelist
resources/evaluate_new_drugs/: evaluate_new_drug_indications.csv  evaluate_new_drug_indications.tsv  evaluate_new_drug_indications_checked.tsv
resources/mapping/: Clustered_chemicals.csv  README.md  chemicals_mapping.tsv  clustered_chemicals.tsv  drugbank_pubchem_mapping.tsv  fullgraph_nodes_mapping.tsv  potency_mapping.tsv
resources/predictive_model/: 070819_node2vec_model_01.pkl  070819_node2vec_model_complete01.pkl  0809_line_model.pkl  1508_node2vec.pkl  2208_node2vec_model.pkl  3008_node2vec_model.pkl  prediction_model_node2vec_final.pkl
resources/predictive_models/: 0309_node2vec_predictive_model.pkl  0411_weighted_node2vec_predictive_model.pkl  0412_weighted_deepwalk_model.pkl  0412_weighted_line_model.pkl  0412_weighted_node2vec_predictive_model.pkl  0509_node2vec_predictive_model.pkl  0609_node2vec_predictive_model.pkl  0812_weighted_node2vec_predictive_model.pkl  1209_node2vec_predictive_model.pkl  2510_weighted_node2vec_predictive_model.pkl  2808_node2vec_predictive_model.pkl  2910_weighted_node2vec_predictive_model.pkl  3009_node2vec_predictive_model.pkl  3010_weighted_node2vec_predictive_model.pkl  3110_weighted_node2vec_predictive_model.pkl  3110_weighted_node2vec_predictive_model_01.pkl
resources/robustness_analysis/0511_experiments_repeats/: 0511_deepwalk_repeat.txt  0511_line_repeat.txt
src/SE_KGE/: DeepWalkOptimization.py  GraRepOptimization.py  chemical_similarities.py  cluster_weights.py  hopeOptimization.py  node2vecOptimization.py  sdneOptimization.py
src/se_kge/: __init__.py  __main__.py  chemical_similarities.py  cli.py  cluster_weights.py  constants.py  deepwalk.db  default_predictor.py  find_relations.py  get_pubchem_compounds.py  get_url_requests.py  graph_preprocessing.py  optimization.py  utils.py  version.py  web.py
src/se_kge/web/: __init__.py  api.py  forms.py  (+2 more)
src/seffnet/: __main__.py  chemical_similarities.py  cli.py  constants.py  default_predictor.py  find_relations.py  get_url_requests.py  graph_preprocessing.py  literature.py  new_chemical_predictor.py  optimization.py  pipeline.py  utils.py  version.py
(+21 files in other folders)
