########################
# Set up Configuration #
########################
[metadata]
name = se_kge
version = attr: src.se_kge.version.VERSION
description = a package for creating side effect embeddings
long_description = file: README.rst

url = https://github.com/AldisiRana/SE_KGE

author = Rana Aldisi
author_email = aldisi.rana@gmail.com

license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords = 
    NRL
    embeddings

[options]
install_requires =
    numpy =< 1.16.4
    networkx
    scipy
    tensorflow < 2.0.0
    gensim
    scikit-learn =< 0.20.3
    tqdm
    bionev @ git+https://github.com/AldisiRana/BioNEV.git
    optuna
    pybel
    defusedxml

zip_safe = false
python_requires = >= 3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    se_kge = se_kge.cli:main
