########################
# Set up Configuration #
########################
[metadata]
name = seffnet
version = attr: src.seffnet.version.VERSION
description = a package for creating side effect embeddings
long_description = file: README.rst

url = https://github.com/seffnet/seffnet
download_url = https://github.com/seffnet/seffnet/releases
project_urls =
    Bug Tracker = https://github.com/seffnet/seffnet/issues
    Source Code = https://github.com/seffnet/seffnet

author = Rana Aldisi
author_email = aldisi.rana@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords = 
    NRL
    embeddings

[options]
install_requires =
    numpy
    networkx
    scipy
    tensorflow < 2.0.0
    gensim
    scikit-learn
    tqdm
    bionev @ git+https://github.com/AldisiRana/BioNEV.git
    optuna
    pybel
    defusedxml
    joblib

zip_safe = false
python_requires = >= 3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
web =
    flask
    flask-bootstrap
    flask-wtf
    flasgger
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    seffnet = seffnet.cli:main
